# LearnOpenGL

OpenglLearn/HelloOpengl/: CMakeLists.txt  Shader.cpp  Shader.h  main.cpp
OpenglLearn/HelloOpengl/shaders/: shader.fs  shader.vs
